Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9409

mysqldump test fails on Windows with VS2015

    XMLWordPrintable

Details

    Description

      From http://buildbot.askmonty.org/buildbot/builders/win32-debug-azure/builds/150/steps/test/logs/stdio
      ..

      --- C:/bb-win-azure/win32-debug/build/mysql-test/r/mysqldump.result	2016-01-12 16:42:54.776944300 +0000
      +++ C:\bb-win-azure\win32-debug\build\mysql-test\r\mysqldump.reject	2016-01-12 17:33:09.592699500 +0000
      @@ -1452,8 +1452,7 @@
         `F_ad13a2a07ca4b7642959dc0c4c740ab6` int(11) DEFAULT NULL,
         `F_3fe94a002317b5f9259f82690aeea4cd` int(11) DEFAULT NULL,
         `F_5b8add2a5d98b1a652ea7fd72d942dac` int(11) DEFAULT NULL,
      -  `F_432aca3a1e345e339f35a30c8f65edce` int(11) DEFAULT NULL,
      -  `F_8d3bba7425e7c98c50f52ca1b52d3735` int(11) DEFAULT NULL,
      +  `F_432aca3a1e345e339f35a30c8f65edce` int(11) DEFAULT NULL,  `F_8d3bba7425e7c98c50f52ca1b52d3735` int(11) DEFAULT NULL,
         `F_320722549d1751cf3f247855f937b982` int(11) DEFAULT NULL,
         `F_caf1a3dfb505ffed0d024130f58c5cfa` int(11) DEFAULT NULL,
         `F_5737c6ec2e0716f3d8a7a5c4e0de0d9a` int(11) DEFAULT NULL,
      

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: